/*
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

//----------------------------------------------
//  Generate command
//----------------------------------------------
//
// When modifying this file, please run the following generate command,
// and include generated code in your commit
//
// third-party/java/protobuf/gen.sh
//
//-----------------------

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.facebook.buck.cd.model.common";
option java_outer_classname = "CommonCDProto";

// protobuf map doesn't support custom type as map key, so would present a map as list of entries.
message RelPathMapEntry {
    RelPath key = 1;
    RelPath value = 2;
}

message RelPath {
    string path = 1;
}

message AbsPath {
    string path = 1;
}

// TODO: the only place where this type is used is JavaAbiInfo.contentPaths
message Path {
    string path = 1;
}
